# cpp-backtest-engine

./: .gitignore  CMakeLists.txt  README.md  backtest.cpp  backtest.h  conanfile.txt  example_strategies.h  main.cpp
config/: stoikov-limit.yaml
src/: backtest.h
src/core/: market_state.cpp  market_state.h  portfolio.cpp  portfolio.h  replay_engine.cpp  replay_engine.h  strategy.h  types.h
src/data/: data_loader.cpp  data_loader.h
src/execution/: exchange_simulator.cpp  exchange_simulator.h  execution_model.cpp  execution_model.h
src/strategies/: stoikov_limit_orders.h  stoikov_market_orders.h
src/utils/: config.cpp  config.h  performance_tracker.cpp  performance_tracker.h  volatility_estimator.h
